--- a/index.html
+++ b/index.html
@@ -145,6 +145,16 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
+              <h4>System Admin & Cashier</h4>
+              <h5>2019 - April 2022</h5>
+              <p><em>JayaMart, Palembang, Indonesia </em></p>
+              <ul>
+                <li>Data entry, update, delete. </li>
+                <li>Backup database, troubleshooting billing system. </li>
+                <li>Reporting. </li>
+              </ul>
+            </div>
+            <div class="resume-item">
               <h4>System Administrator</h4>
               <h5>2018 - 2019</h5>
               <p><em>PT. IP Network Solusindo, Jakarta, Indonesia </em></p>
@@ -153,6 +163,10 @@
                 <li>Continuous Integration (CI), automation the integration of code changes from multiple contributors into a single software project</li>
                 <li>Continuous Deployment (CD), automates the continuous deployment project, builds, tests, and deployments. </li>
               </ul>
+            </div>
+            <div class="resume-item">
+              <h4>GrabCar, GoCar</h4>
+              <h5>2016 - 2018</h5>
             </div>
             <div class="resume-item">
               <h4>IT Manager</h4>
